Integrated Xebia Essentials 2014 deck && improved navigation

--- a/Targets/XebiaDev/XebiaDev-Info.plist
+++ b/Targets/XebiaDev/XebiaDev-Info.plist
@@ -90,7 +90,8 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>XBBaseUrl</key>
-	<string>http://backend.mobile.xebia.io/api/v1</string>
+    <string>http://192.168.0.12/api/v1</string>
+	<!--<string>http://backend.mobile.xebia.io/api/v1</string>-->
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
