Fixed Auto rotation regression (Appeared with replacement of Sliding menu)

--- a/Targets/XebiaDev/XebiaDev-Info.plist
+++ b/Targets/XebiaDev/XebiaDev-Info.plist
@@ -86,12 +86,13 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>XBBaseUrl</key>
-    <string>http://192.168.0.12/api/v1</string>
-	<!--<string>http://backend.mobile.xebia.io/api/v1</string>-->
+	<string>http://192.168.0.12/api/v1</string>
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
